# huggingface-datasets

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/create-dataset/: SKILL.md
.claude/skills/create-dataset/templates/MyHFDataset/: MyHFDataset.py  README.md  pyproject.toml
.claude/skills/create-dataset/templates/MyHFDataset/tests/: MyHFDataset_test.py
.claude/skills/create-dataset/templates/{{ dataset_name }}/: README.md  pyproject.toml  {{ dataset_name }}.py
.claude/skills/create-dataset/templates/{{ dataset_name }}/tests/: {{ dataset_name }}_test.py
datasets/BannerRequest400/: BannerRequest400.py  README.md  pyproject.toml
datasets/BannerRequest400/tests/: BannerRequest400_test.py
datasets/CTXFont/: CTXFont.py  README.md  pyproject.toml
datasets/CTXFont/tests/: CTXFont_test.py
datasets/DesignBench/: DesignBench.py  README.md  pyproject.toml
datasets/DesignBench/tests/: DesignBench_test.py
datasets/GraphicDesignEvaluation/: GraphicDesignEvaluation.py  README.md  pyproject.toml
datasets/GraphicDesignEvaluation/tests/: GraphicDesignEvaluation_test.py
datasets/ObjectRemovalAlpha/: ObjectRemovalAlpha.py  pyproject.toml
datasets/ObjectRemovalAlpha/tests/: ObjectRemovalAlpha_test.py
