[project]
name = "huggingface-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.0.0,<4.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=6.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.1.5",
]

[tool.uv.workspace]
members = [
    "datasets/*",
]
